--- a/.github/workflows/uptime.yml
+++ b/.github/workflows/uptime.yml
@@ -1,17 +1,18 @@
 ﻿name: uptime
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: "*/5 * * * *"
   workflow_dispatch:
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
       - name: Ping ready endpoint
+        shell: bash
         run: |
-          set -e
-          URL='https://api.cognomega.com/ready'
-          CODE=\
-          echo "HTTP: \"
+          set -euo pipefail
+          URL="https://api.cognomega.com/ready"
+          CODE=$(curl -sS -w "%{http_code}" -o /tmp/body "$URL")
+          echo "HTTP: $CODE"
           echo "Body:"; cat /tmp/body; echo
-          test "\" = "200"
+          test "$CODE" = "200"
