--- a/api/package.json
+++ b/api/package.json
@@ -8,14 +8,14 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "hono": "^4.5.7",
-    "@neondatabase/serverless": "^0.10.6",
-    "jose": "^5.9.3",
-    "zod": "^3.23.8",
-    "uuid": "^9.0.1"
+    "@neondatabase/serverless": "^1.0.1",
+    "hono": "^4.9.5",
+    "jose": "^6.1.0",
+    "uuid": "^9.0.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
-    "@cloudflare/workers-types": "^4.20240925.0"
+    "@cloudflare/workers-types": "^4.20240925.0",
+    "typescript": "^5.6.2"
   }
 }
