--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ api/node_modules/
 
 # local backups / misc
 ruleset-backup.json
+# --- frontend ---
+frontend/node_modules/
+frontend/dist/
+frontend/.env.production
+
+# --- api ---
+api/node_modules/
+
+# local backups / misc
+ruleset-backup.json
