--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,33 @@
-﻿# --- frontend ---
-/frontend/node_modules/
-/frontend/dist/
-/frontend/.env.production
-/frontend/.env*
+﻿# Node/TS
+node_modules/
+dist/
+build/
+.esbuild/
+.cache/
+coverage/
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-error.log*
 
-# --- api ---
-/api/node_modules/
-/api/gen-jwt.mjs
+# Cloudflare Workers/Pages
+.wrangler/
+.dev.vars
+wrangler-state/
 
-# local backups / misc
-/ruleset-backup.json
+# Env & secrets
+.env
+.env.*
+*.pem
+*.pfx
+*.crt
+*.key
+api/config/*secret*
+api/config/*token*
+api/config/*key*
 
-# editors/OS
-.vscode/
+# OS / misc
 .DS_Store
 Thumbs.db
+*.zip
+*.tar.gz
