--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mlc-ai/web-llm": "^0.2.47",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@mlc-ai/web-llm": "^0.2.47"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.4.8",
+    "@tailwindcss/postcss": "^4.1.13",
     "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.6.2"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8"
   }
 }
