--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.2024.9.0",
     "@rollup/rollup-win32-x64-msvc": "^4.50.1",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/react": "^19.1.13",
