--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -4,7 +4,7 @@ name                = "cognomega-api"
 main                = "src/index.ts"
 compatibility_date  = "2025-09-03"
 workers_dev         = false         # we use zone routes instead of *.workers.dev
-logpush             = true          # enable Logpush (optional; safe to keep)
+#logpush             = true          # enable Logpush (optional; safe to keep)
 
 # Route *everything* under api.cognomega.com to this Worker
 routes = [
