--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -2,10 +2,14 @@ name: Deploy API (Cloudflare Workers)
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
       - 'api/**'
-      - '.github/workflows/deploy-api.yml'
+  workflow_dispatch:
+
+concurrency:
+  group: deploy-api-prod
+  cancel-in-progress: false
 
 jobs:
   deploy:
@@ -13,17 +17,8 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: api/package-lock.json
-
-      - name: Install deps
-        working-directory: api
-        run: npm ci
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Deploy with Wrangler
         uses: cloudflare/wrangler-action@v3
@@ -31,4 +26,6 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           workingDirectory: api
-          command: deploy --name cognomega-api --routes "https://api.cognomega.com/*"
+          # wrangler.toml already has name/routes/compatibility_date
+          command: deploy
+          packageManager: npm
