--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -41,7 +41,7 @@ bucket_name = "cognomega-uploads"
 [vars]
 # CORS / JWT / Credits
 CREDIT_PER_1K    = "0.05"                     # credits per 1k tokens
-ALLOWED_ORIGINS  = "https://app.cognomega.com"
+ALLOWED_ORIGINS  = "https://app.cognomega.com,https://www.cognomega.com,http://localhost:5173"
 JWT_TTL_SEC      = "3600"
 ISSUER           = "https://api.cognomega.com"
 KID              = "k1"
@@ -56,7 +56,7 @@ OPENAI_BASE  = "https://api.openai.com/v1"
 
 # Optional (uncomment if you want to override)
 # GROQ_BASE        = "https://api.groq.com/openai/v1"
-# MAX_UPLOAD_BYTES = "10485760"    # 10MB
+MAX_UPLOAD_BYTES = "10485760"    # 10MB
 
 # --- Scheduled tasks (you already had this; keep as-is) ---
 [triggers]
