--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -1,4 +1,5 @@
-﻿# wrangler.toml — Cognomega API Worker (prod, merged with former auth worker config)
+﻿# wrangler.toml — Cognomega API Worker (prod)
+# Merged from the former auth worker + current API. Routes all traffic for api.cognomega.com.
 
 name               = "cognomega-api"
 main               = "src/index.ts"
@@ -6,7 +7,7 @@ compatibility_date = "2025-09-03"
 workers_dev        = false
 # logpush          = true   # optional
 
-# Route *everything* under api.cognomega.com to this Worker
+# Route everything under the zone to this Worker
 routes = [
   { pattern = "api.cognomega.com/*", zone_name = "cognomega.com" }
 ]
@@ -17,47 +18,67 @@ routes = [
 [ai]
 binding = "AI"
 
-# KV namespaces (from auth)
+# KV namespaces
+# KEYS: JWKS (public JSON at /.well-known/jwks.json)
 [[kv_namespaces]]
-binding = "KEYS"         # public JWKS (key: "jwks")
+binding = "KEYS"
 id      = "7e9d002852ba44849900a2babfcaf816"
 
+# KV_BILLING: credits + usage + jobs
 [[kv_namespaces]]
-binding = "KV_BILLING"   # credits + usage + jobs
+binding = "KV_BILLING"
 id      = "5da314a8b48b4db684678ab5ad074563"
 
 # R2 buckets
-# Keep BOTH: legacy code may use R2, new code uses R2_UPLOADS.
+# Keep BOTH: legacy routes may use R2 (artifacts), new module uses R2_UPLOADS.
 [[r2_buckets]]
-binding     = "R2"                 # existing bucket your API used
+binding     = "R2"                 # legacy artifacts bucket
 bucket_name = "cognomega-prod"
 
 [[r2_buckets]]
-binding     = "R2_UPLOADS"         # used by the imported auth/billing module
+binding     = "R2_UPLOADS"         # direct-upload bucket (auth/billing module)
 bucket_name = "cognomega-uploads"
 
-# --- Vars (non-secrets) brought over from auth ---
+# --- Vars (non-secrets) ---
 
 [vars]
-# CORS / JWT / Credits
-CREDIT_PER_1K    = "0.05"                     # credits per 1k tokens
-ALLOWED_ORIGINS  = "https://app.cognomega.com,https://www.cognomega.com,http://localhost:5173"
-JWT_TTL_SEC      = "3600"
-ISSUER           = "https://api.cognomega.com"
-KID              = "k1"
+# CORS allowlist for the module-level CORS (index.ts also handles CORS strictly).
+# Include app, marketing site, Pages prod, local dev; keep comma-separated exact origins.
+ALLOWED_ORIGINS = "https://app.cognomega.com,https://www.cognomega.com,https://cognomega.com,https://cognomega-frontend.pages.dev,http://localhost:5173,http://127.0.0.1:5173"
 
-# Provider order & model defaults
+# JWT + issuer details for guest tokens (RS256 via PRIVATE_KEY_PEM + KID).
+ISSUER      = "https://api.cognomega.com"
+JWT_TTL_SEC = "3600"
+KID         = "k1"
+
+# Billing config
+CREDIT_PER_1K   = "0.05"        # credits per 1k tokens
+MAX_UPLOAD_BYTES = "10485760"   # 10MB cap for /api/upload/direct
+
+# Provider order & model defaults for SI/LLM orchestration
 PREFERRED_PROVIDER = "groq,cfai,openai"
 
+# Model defaults
 GROQ_MODEL   = "llama-3.1-8b-instant"
 CF_AI_MODEL  = "@cf/meta/llama-3.1-8b-instruct"
 OPENAI_MODEL = "gpt-4o-mini"
+
+# Upstream base URLs (override only if needed)
 OPENAI_BASE  = "https://api.openai.com/v1"
+# GROQ_BASE  = "https://api.groq.com/openai/v1"  # default is this even if unset
 
-# Optional (uncomment if you want to override)
-# GROQ_BASE        = "https://api.groq.com/openai/v1"
-MAX_UPLOAD_BYTES = "10485760"    # 10MB
+# (Optional demo/legacy DB routes in index.ts; safe to omit if unused)
+# NEON_DATABASE_URL = "postgres://..."
+# DATABASE_URL      = "postgres://..."
 
-# --- Scheduled tasks (you already had this; keep as-is) ---
+# --- Secrets (set via `wrangler secret put ...`) ---
+# PRIVATE_KEY_PEM     # RS256 PKCS#8 PEM used for guest JWT signing
+# ADMIN_API_KEY       # for /api/credits/adjust and /api/admin/* routes
+# GROQ_API_KEY        # if using Groq
+# OPENAI_API_KEY      # if using OpenAI
+# CARTESIA_API_KEY    # optional (TTS demo)
+# ADMIN_TASK_SECRET   # for internal /admin/process-one and cron trigger
+
+# --- Scheduled tasks (cron) ---
 [triggers]
 crons = ["*/5 * * * *"]
