wrangler: set WARN_CREDITS=5

--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -44,6 +44,7 @@ bucket_name = "cognomega-uploads"
 # CORS allowlist (exact origins; no wildcards).
 # Module CORS reads this env var; index.ts also sets CORS and will allow Pages previews.
 ALLOWED_ORIGINS = "https://app.cognomega.com,https://www.cognomega.com,https://cognomega.com,https://cognomega-frontend.pages.dev,http://localhost:5173,http://127.0.0.1:5173"
+WARN_CREDITS = "5"
 
 # JWT / issuer for guest tokens (RS256 via PRIVATE_KEY_PEM + KID)
 ISSUER      = "https://api.cognomega.com"
