--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,64 +1,50 @@
-﻿name: deploy
+name: deploy
+
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'api/**'
-      - '.github/workflows/deploy.yml'
+      - "api/**"
   workflow_dispatch:
 
 jobs:
-  api:
+  deploy:
     name: Deploy API (CF Workers)
     runs-on: ubuntu-latest
-    environment:
-      name: production
-      url: https://api.cognomega.com
-    permissions:
-      contents: read
-      id-token: write
+    timeout-minutes: 15
+    env:
+      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Install Wrangler
-        run: npm i -g wrangler@3
-      - name: Install API deps
-        working-directory: api
-        run: |
-          if [ -f pnpm-lock.yaml ]; then
-            corepack enable
-            pnpm i --no-frozen-lockfile
-          elif [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm i
-          fi
-      - name: Deploy (wrangler)
-        working-directory: api
-        env:
-          CLOUDFLARE_API_TOKEN: \${{ secrets.CF_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: \${{ secrets.CF_ACCOUNT_ID }}
-        run: wrangler deploy
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # Post-deploy probes
-      - name: Probes
+      - name: Verify required secrets present
         run: |
           set -e
-          base="https://api.cognomega.com"
-          echo "== ai/binding =="                        | tee probes.txt
-          curl -sS "$base/api/ai/binding"               | tee -a probes.txt
-          echo "\n== jwks (head 120) =="                 | tee -a probes.txt
-          curl -sS "$base/.well-known/jwks.json" | head -c 120 | tee -a probes.txt
-          echo "\n== preflight si =="                    | tee -a probes.txt
-          curl -sSI -X OPTIONS "$base/api/si/ask" \
-            -H "Origin: https://app.cognomega.com" \
-            -H "Access-Control-Request-Method: POST" \
-            -H "Access-Control-Request-Headers: content-type, x-user-email, x-intelligence-tier" \
-            | tee -a probes.txt
-      - name: Upload proofs
-        uses: actions/upload-artifact@v4
+          [ -n "$CLOUDFLARE_API_TOKEN" ] || { echo "::error::CLOUDFLARE_API_TOKEN secret is missing"; exit 1; }
+          [ -n "$CLOUDFLARE_ACCOUNT_ID" ]  || { echo "::error::CLOUDFLARE_ACCOUNT_ID secret is missing"; exit 1; }
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          name: post-deploy-proofs
-          path: probes.txt
+          node-version: '20'
+
+      - name: Install Wrangler
+        run: npm i -g wrangler@3
+
+      - name: Who am I (debug auth)
+        working-directory: api
+        run: |
+          wrangler --version
+          wrangler whoami || true
+
+      - name: Show wrangler.toml (first lines)
+        working-directory: api
+        run: sed -n '1,120p' wrangler.toml || true
+
+      - name: Deploy (wrangler)
+        working-directory: api
+        run: |
+          # if you use envs like [env.production], add:  wrangler deploy --env production
+          wrangler deploy --config wrangler.toml
