--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,22 +29,31 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: api/package-lock.json
 
-      - name: Install Wrangler
-        run: npm i -g wrangler@3
+      - name: Install API deps
+        working-directory: api
+        run: npm ci --no-audit --no-fund
 
-      - name: Who am I (debug auth)
+      - name: List key deps (debug)
         working-directory: api
         run: |
-          wrangler --version
-          wrangler whoami || true
+          node -v
+          npm -v
+          npm ls hono || true
+          npm ls @neondatabase/serverless || true
 
       - name: Show wrangler.toml (first lines)
         working-directory: api
         run: sed -n '1,120p' wrangler.toml || true
 
-      - name: Deploy (wrangler)
+      - name: Deploy (npx wrangler@4)
         working-directory: api
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
-          # if you use envs like [env.production], add:  wrangler deploy --env production
-          wrangler deploy --config wrangler.toml
+          npx wrangler@4 --version
+          # If you use [env.production] in wrangler.toml, add: --env production
+          npx wrangler@4 deploy --config wrangler.toml
