--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "wrangler dev",
     "dev:remote": "wrangler dev --remote",
@@ -25,6 +28,6 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240925.0",
     "typescript": "^5.6.2",
-    "wrangler": "^4.38.0"
+    "wrangler": "^4.39.0"
   }
 }
