--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "cognomega-edge-monorepo",
   "private": true,
-  "packageManager": "pnpm@10.15.1"
+  "packageManager": "pnpm@10.15.1",
+  "engines": { "node": ">=20.0.0" },
+  "scripts": {
+    "build": "pnpm -r build",
+    "dev:frontend": "pnpm -C packages/frontend dev",
+    "dev:builder": "pnpm -C packages/builder dev",
+    "dev:api": "pnpm -C packages/api dev"
+  }
 }
