--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,92 +1,17 @@
 ﻿name: ci
-
 on:
   pull_request:
-  push:
+    branches: [main]
 
 jobs:
-  changes:
-    name: detect changed paths
+  verify:
     runs-on: ubuntu-latest
-    outputs:
-      api: ${{ steps.filter.outputs.api }}
-      frontend: ${{ steps.filter.outputs.frontend }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          filters: |
-            api:
-              - 'api/**'
-            frontend:
-              - 'frontend/**'
-
-  api:
-    name: api
-    needs: changes
-    if: needs.changes.outputs.api == 'true'
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: api
-        shell: bash
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: |
-            api/package-lock.json
-            api/pnpm-lock.yaml
-      - name: Install deps (npm or pnpm)
-        run: |
-          if [ -f pnpm-lock.yaml ]; then
-            corepack enable
-            pnpm --version
-            pnpm install --no-frozen-lockfile
-          elif [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
-      - name: Typecheck if present
-        run: npx -y tsc --noEmit || echo "tsc not present; skipping"
-      - name: Build if present
-        run: npm run -s build --if-present || true
-
-  frontend:
-    name: frontend
-    needs: changes
-    if: needs.changes.outputs.frontend == 'true'
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
-        shell: bash
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: |
-            frontend/package-lock.json
-            frontend/pnpm-lock.yaml
-      - name: Install deps (npm or pnpm)
-        run: |
-          if [ -f pnpm-lock.yaml ]; then
-            corepack enable
-            pnpm --version
-            pnpm install --no-frozen-lockfile
-          elif [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
-      - name: Typecheck if present
-        run: npx -y tsc --noEmit || echo "tsc not present; skipping"
-      - name: Build if present
-        run: npm run -s build --if-present || true
+        with: { node-version: 20 }
+      - run: corepack enable && corepack prepare pnpm@10.15.1 --activate
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm -r run build --if-present
+      - run: pnpm -r run check --if-present
+      - run: pnpm -r run test --if-present
