--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,10 +1,10 @@
-name: deploy-frontend
+name: deploy-api
 on:
   push:
     branches: [main]
     paths:
-      - "packages/frontend/**"
-      - ".github/workflows/deploy-frontend.yml"
+      - "packages/api/**"
+      - ".github/workflows/deploy-api.yml"
   workflow_dispatch:
 
 jobs:
@@ -23,12 +23,9 @@ jobs:
       - name: Install deps (workspace)
         run: pnpm install --frozen-lockfile
 
-      - name: Build app
-        working-directory: packages/frontend
-        run: pnpm run build
-
-      - name: Deploy to Cloudflare Pages
+      - name: Deploy API with Wrangler
+        working-directory: packages/api
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: npx wrangler@4 pages deploy packages/frontend/dist --project-name cognomega-edge
+        run: npx wrangler@4 deploy
