--- a/.github/workflows/deploy-builder.yml
+++ b/.github/workflows/deploy-builder.yml
@@ -1,10 +1,10 @@
-name: deploy-frontend
+name: deploy-builder
 on:
   push:
     branches: [main]
     paths:
-      - "packages/frontend/**"
-      - ".github/workflows/deploy-frontend.yml"
+      - "packages/builder/**"
+      - ".github/workflows/deploy-builder.yml"
   workflow_dispatch:
 
 jobs:
@@ -23,12 +23,12 @@ jobs:
       - name: Install deps (workspace)
         run: pnpm install --frozen-lockfile
 
-      - name: Build app
-        working-directory: packages/frontend
+      - name: Build builder
+        working-directory: packages/builder
         run: pnpm run build
 
       - name: Deploy to Cloudflare Pages
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: npx wrangler@4 pages deploy packages/frontend/dist --project-name cognomega-edge
+        run: npx wrangler@4 pages deploy packages/builder/dist --project-name cognomega-builder
