--- a/packages/si-core/package.json
+++ b/packages/si-core/package.json
@@ -5,12 +5,15 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "clean": "powershell -NoProfile -Command Remove-Item -Recurse -Force dist -ErrorAction SilentlyContinue"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "typescript": "^5.6.3"
   },
   "license": "MIT"
