--- a/packages/si-core/package.json
+++ b/packages/si-core/package.json
@@ -16,5 +16,9 @@
     "@types/node": "^24.5.2",
     "typescript": "^5.6.3"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.1"
+  }
 }
