--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "cognomega-edge-monorepo",
   "private": true,
   "packageManager": "pnpm@10.15.1",
-  "engines": { "node": ">=20.0.0" },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "pnpm -r build",
     "dev:frontend": "pnpm -C packages/frontend dev",
